# mcp-data-platform-control-plane

./: README.md  pyproject.toml  server.py
aws/: athena.py  config.py  glue.py  resolver.py
tools/: lineage.py  replay_plans.py
